--- a/synctube_front/package.json
+++ b/synctube_front/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "socket.io-client": "^3.0.5",
     "vue": "^2.6.11",
     "vue-youtube": "^1.4.0"
   },
