--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" : "nodemon synctube_back/app.js"
+    "dev" : "nodemon server/app.js"
   },
   "repository": {
     "type": "git",
